objects/Lead.object
<CustomObject>
    <fields>
        <fullName>modigie__Modigie_Mobile_Phone_Number_Salesloft_FM__c</fullName>
        <formula>modigie__Modigie_Mobile_Phone_Number_Salesloft__c</formula>
        <label>Modigie Mobile E.164 Map To Dialer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Mobile_Phone_Number_Salesloft__c</fullName>
        <label>Modigie Mobile E.164 Format</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Verified_Number__c</fullName>
        <label>Modigie Validated Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>modigie__Modigie_Verified_Number_formula__c</fullName>
        <formula>modigie__Modigie_Verified_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modigie Mobile Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>modigie__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Test_Alternate_Linked_Url__c</fullName>
        <label>Test Alternate Linked Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__linkedin_url__c</fullName>
        <label>Modigie LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <label>All Contacted Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>startsWith</operation>
            <value>fr,be,isra,luxembourg,italy,germany</value>
        </filters>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>notEqual</operation>
            <value>Benin,Bermuda,Belarus</value>
        </filters>
        <label>Marcel leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads_Not_in_Conversica</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>All Unassigned Leads Not in Conversica</label>
    </listViews>
    <listViews>
        <fullName>All_Salesforce</fullName>
        <columns>EBQ_Rating__c</columns>
        <columns>EBQ_Date__c</columns>
        <columns>EBQ_Comments__c</columns>
        <columns>EBQ_Next_Step__c</columns>
        <columns>EBQ_Rep2__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>salesforce</value>
        </filters>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>equals</operation>
            <value>United States,USA,US,U.S.</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>Open Leads,edwards</value>
        </filters>
        <filters>
            <field>EBQ_Rep2__c</field>
            <operation>contains</operation>
            <value>Rebecca</value>
        </filters>
        <label>EBQ - Rebecca Salesforce</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDR_Role</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClickDeploy_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>ClickDeploy_Created_Date__c</columns>
        <columns>ClickDeploy_Enterprise_Trial_Started__c</columns>
        <columns>ClickDeploy_Last_Login_Date__c</columns>
        <columns>ClickDeploy_License_Type__c</columns>
        <columns>ClickDeploy_Salesforce_Username__c</columns>
        <columns>ClickDeploy_Total_Deploy_Attempt__c</columns>
        <columns>ClickDeploy_Total_Deploy_This_Month__c</columns>
        <columns>MQL__c</columns>
        <columns>MQL_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ClickDeploy_User_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ClickDeploy Leads</label>
    </listViews>
    <listViews>
        <fullName>Cognizant_Tom</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>cognizant</value>
        </filters>
        <label>Cognizant  - Tom</label>
    </listViews>
    <listViews>
        <fullName>Created_this_week</fullName>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified,Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notContain</operation>
            <value>package</value>
        </filters>
        <label>Created this week</label>
    </listViews>
    <listViews>
        <fullName>Dreamforce_Follow_Up_AMER_AEs</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Dreamforce Follow Up: AMER AEs</label>
    </listViews>
    <listViews>
        <fullName>Dreamforce_Follow_Up_for_AMER_AEs</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Dreamforce Follow Up for AMER AEs</label>
    </listViews>
    <listViews>
        <fullName>EBQ_All_Conversica_Andre</fullName>
        <columns>AVA__AVAAI_first_message_date__c</columns>
        <columns>AVA__AVAAI_last_message_date__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>EBQ_Rep2__c</columns>
        <columns>EBQ_Rating__c</columns>
        <columns>EBQ_Date__c</columns>
        <columns>EBQ_Comments__c</columns>
        <columns>EBQ_Next_Step__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>modigie__Modigie_Verified_Number_formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AVA__AVAAI_last_message_date__c</field>
            <operation>greaterThan</operation>
            <value>8/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>startsWith</operation>
            <value>i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z,0,1,2,3,4,5,6,7,8,9</value>
        </filters>
        <filters>
            <field>EBQ_Rating__c</field>
            <operation>equals</operation>
        </filters>
        <label>EBQ - *** Andre Conversica</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDR_Role</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBQ_All_Conversica_Max</fullName>
        <columns>AVA__AVAAI_first_message_date__c</columns>
        <columns>AVA__AVAAI_last_message_date__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>EBQ_Rep2__c</columns>
        <columns>EBQ_Rating__c</columns>
        <columns>EBQ_Date__c</columns>
        <columns>EBQ_Comments__c</columns>
        <columns>EBQ_Next_Step__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>modigie__Modigie_Verified_Number_formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AVA__AVAAI_last_message_date__c</field>
            <operation>greaterThan</operation>
            <value>8/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>startsWith</operation>
            <value>a,b,c,d,e,f,g,h,(,[</value>
        </filters>
        <filters>
            <field>EBQ_Rating__c</field>
            <operation>equals</operation>
        </filters>
        <label>EBQ - *** Max Conversica</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDR_Role</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBQ_All_Conversica_Touches</fullName>
        <columns>AVA__AVAAI_first_message_date__c</columns>
        <columns>AVA__AVAAI_last_message_date__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>EBQ_Rep2__c</columns>
        <columns>EBQ_Rating__c</columns>
        <columns>EBQ_Date__c</columns>
        <columns>EBQ_Comments__c</columns>
        <columns>EBQ_Next_Step__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>modigie__Modigie_Verified_Number_formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AVA__AVAAI_last_message_date__c</field>
            <operation>greaterThan</operation>
            <value>8/31/2021 12:00 AM</value>
        </filters>
        <label>EBQ - ** All Conversica Touches</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDR_Role</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBQ_All_Fix</fullName>
        <columns>EBQ_Rep2__c</columns>
        <columns>EBQ_Rating__c</columns>
        <columns>EBQ_Date__c</columns>
        <columns>EBQ_Comments__c</columns>
        <columns>EBQ_Next_Step__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>modigie__Modigie_Verified_Number_formula__c</columns>
        <columns>FB_Person_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>EBQ - ** Danny Campaign</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDR_Role</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBQ_All_Inbound</fullName>
        <columns>EBQ_Rep2__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>AVA__AVAAI_first_message_date__c</columns>
        <columns>AVA__AVAAI_last_message_date__c</columns>
        <columns>EBQ_Rating__c</columns>
        <columns>EBQ_Date__c</columns>
        <columns>EBQ_Comments__c</columns>
        <columns>EBQ_Next_Step__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AVA__AVAAI_last_message_date__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2021 12:00 AM</value>
        </filters>
        <label>EBQ - ** AppExchange</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDR_Role</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EBQ_All_New_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>AVA__AVAAI_last_message_date__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>EBQ_Rep2__c</columns>
        <columns>EBQ_Rating__c</columns>
        <columns>EBQ_Date__c</columns>
        <columns>EBQ_Comments__c</columns>
        <columns>EBQ_Next_Step__c</columns>
        <columns>EBQ_First_Touch__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EBQ_Rating__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2021 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>web,drift</value>
        </filters>
        <filters>
            <field>Lead_Source_Detail__c</field>
            <operation>notContain</operation>
            <value>IDG</value>
        </filters>
        <label>EBQ - ** All New Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>SDR_Role</group>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>ISO_code_2_for_State_and_Country</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 OR(
   TEXT(LeadSource)&lt;&gt;&apos;Jigsaw&apos;,
   NOT(CONTAINS(TEXT(LeadSource),&apos;Package Installation&apos;)),
   NOT(CONTAINS(TEXT(LeadSource),&apos;SFDC-&apos;))
 ),
 OR(
  AND(
   LEN(State)&gt;2,
   OR(Country==&apos;US&apos;,Country==&apos;CA&apos;)
  ),
  LEN(Country)&gt;2
 )
)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>You must use a 2 letter ISO code for State and Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Industry</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

OR( 
		ISPICKVAL(Status, &quot;Nurturing&quot;), 
		ISPICKVAL(Status, &quot;Qualified&quot;) 

	), 

	Turn_VR_Off__c = false, 
	ISPICKVAL(Industry, &quot;&quot;),
	NOT(
		OR(
			CONTAINS(TEXT(LeadSource),&quot;Package Installation&quot;),
			CONTAINS(TEXT(LeadSource),&quot;ClickDeploy App&quot;)
		)
	)	
)</errorConditionFormula>
        <errorDisplayField>Industry</errorDisplayField>
        <errorMessage>What industry?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Step</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
	OR( 
		ISPICKVAL(Status, &quot;Nurturing&quot;), 
		ISPICKVAL(Status, &quot;Qualified&quot;) 
	), 
	Turn_VR_Off__c  = false,
	ISBLANK(Next_Step__c),
	NOT(
		CONTAINS(TEXT(LeadSource),&quot;Package Installation&quot;)
	)		
)</errorConditionFormula>
        <errorDisplayField>Next_Step__c</errorDisplayField>
        <errorMessage>What is your next step with this lead?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_contact_date</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
	OR( 
		ISPICKVAL(Status, &quot;Nurturing&quot;), 
		ISPICKVAL(Status, &quot;Qualified&quot;) 
	), 
	Turn_VR_Off__c  = false,
	ISBLANK(Next_Contact__c),
		NOT(
		CONTAINS(TEXT(LeadSource),&quot;Package Installation&quot;)
	)	
)</errorConditionFormula>
        <errorDisplayField>Next_Contact__c</errorDisplayField>
        <errorMessage>When are you contacting them next?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_of_Employees</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
	OR( 
		ISPICKVAL(Status, &quot;Nurturing&quot;), 
		ISPICKVAL(Status, &quot;Qualified&quot;) 
	), 
	Turn_VR_Off__c  = false,
	ISBLANK(NumberOfEmployees),
	NOT(
		CONTAINS(TEXT(LeadSource),&quot;Package Installation&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>NumberOfEmployees</errorDisplayField>
        <errorMessage>Please fill in No. of Employees</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rating</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
	OR( 
		ISPICKVAL(Status, &quot;Nurturing&quot;), 
		ISPICKVAL(Status, &quot;Qualified&quot;) 
	), 
	Turn_VR_Off__c  = false,
	ISPICKVAL(Rating, &quot;&quot;) ,
	NOT(
		CONTAINS(TEXT(LeadSource),&quot;Package Installation&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Rating</errorDisplayField>
        <errorMessage>Please choose a rating</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_unqualified</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	ISPICKVAL(Status, &quot;Unqualified&quot;),
	Turn_VR_Off__c  = false,
	ISPICKVAL(Reason_unqualified__c, &quot;&quot;),
	NOT(
		CONTAINS(TEXT(LeadSource),&quot;Package Installation&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Reason_unqualified__c</errorDisplayField>
        <errorMessage>Why is your lead unqualified?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_required_for_US_CA</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  AND(OR(Country==&apos;US&apos;,Country==&apos;CA&apos;), ISBLANK(State)),
  OR(
    TEXT(Status)==&apos;Contacted&apos;,
    TEXT(Status)==&apos;Qualified&apos;
  ),
  OR(
    NOT(CONTAINS(Text(LeadSource), &apos;SFDC-&apos;)),
    NOT(CONTAINS(Text(LeadSource), &apos;Package Installation&apos;))
  )
)</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>The 2 Letter ISO code for the State is required when the country is set to the US or CA.</errorMessage>
    </validationRules>
</CustomObject>